kubernetes/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: gameon-system
  labels:
    app: gameon-auth
spec:
  type: ClusterIP
  ports:
    - port: 9080
  selector:
    app: gameon-auth
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: auth
  namespace: gameon-system
  labels:
    app: gameon-auth
spec:
  template:
    metadata:
      labels:
        app: gameon-auth
    spec:
      volumes:
        - name: certificate
          secret:
            secretName: global-cert
      containers:
        - image: gameontext/gameon-auth:latest
          imagePullPolicy: Always
          name: auth
          ports:
            - containerPort: 9080
              name: auth
          volumeMounts:
            - name: certificate 
              mountPath: /etc/cert
