kubernetes/couchdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: gameon-system
  labels:
    app: gameon-couchdb
spec:
  ports:
    - port: 5984
      protocol: TCP
      targetPort: 5984
  selector:
    app: gameon-couchdb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchdb
  namespace: gameon-system
  labels:
    app: gameon-couchdb
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gameon-couchdb
    spec:
      containers:
      - image: couchdb:1.6.1
        name: couchdb
        ports:
        - containerPort: 5984
          name: couchdb
