kubernetes/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: gameon-system
  labels:
    app: gameon
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: gameon-kafka
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka
  namespace: gameon-system
  labels:
    app: gameon-kafka
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gameon-kafka
    spec:
      containers:
      - image: spotify/kafka
        name: kafka
        ports:
        - containerPort: 9092
          name: kafka
