kubernetes/mediator.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediator
  namespace: gameon-system
  labels:
    app: gameon-mediator
spec:
  type: ClusterIP
  ports:
    - port: 9080
  selector:
    app: gameon-mediator
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mediator
  namespace: gameon-system
  labels:
    app: gameon-mediator
spec:
  template:
    metadata:
      labels:
        app: gameon-mediator
    spec:
      volumes:
        - name: certificate
          secret:
            secretName: global-cert
      containers:
        - image: gameontext/gameon-mediator:latest
          imagePullPolicy: Always
          name: mediator
          ports:
            - containerPort: 9080
              name: mediator
          volumeMounts:
            - name: certificate
              mountPath: /etc/cert
