kubernetes/player.yaml
apiVersion: v1
kind: Service
metadata:
  name: player
  namespace: gameon-system
  labels:
    app: gameon-player
spec:
  type: ClusterIP
  ports:
    - port: 9080
  selector:
    app: gameon-player
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: player
  namespace: gameon-system
  labels:
    app: gameon-player
spec:
  template:
    metadata:
      labels:
        app: gameon-player
    spec:
      volumes:
      - name: certificate
        configMap:
          name: global-cert
          items:
          - key: cert.pem
            path: cert.pem
      containers:
      - image: mycluster.icp:8500/gameon-system/gameon-player:latest
        imagePullPolicy: Always
        name: player
        ports:
        - containerPort: 9080
          name: player
        volumeMounts:
        - name: certificate
          mountPath: /etc/cert
