kubernetes/room.yaml
apiVersion: v1
kind: Service
metadata:
  name: room
  namespace: gameon-system
  labels:
    app: gameon-room
spec:
  type: ClusterIP
  ports:
    - port: 9080
  selector:
    app: gameon-room
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: room
  namespace: gameon-system
  labels:
    app: gameon-room
spec:
  template:
    metadata:
      labels:
        app: gameon-room
    spec:
      volumes:
        - name: certificate
          secret:
            secretName: global-cert
      containers:
      - image: gameontext/gameon-room:latest
        imagePullPolicy: Always
        name: room
        ports:
          - containerPort: 9080
            name: room
        volumeMounts:
          - name: certificate
            mountPath: /etc/cert
